# SQL_Object_Generator

./: .gitignore  README.md  SQL Object Generator.spec  app.manifest  app.spec  build.bat  build.py  build.spec  config.json  main.py  main.spec  pyproject.toml  requirements.txt  sql_fn_query.sql  sql_obj_query.sql  sql_table_records.sql  sql_table_records_filtered.sql  sql_tables_query.sql  version_info.txt
old/: ConsultaUltimosCambios.sql  FuncionSQL.sql  FuncionSQL.txt  Obtener_Funciones_Nombre.sql  SQL_Script_Generator_Consulta.py  SQL_Script_Generator_Funcion.py
src/config/: config.json  config.py
src/core/: insert_exporter.py  sql_generator.py  sql_search_engine.py
src/generated_querys/: 1c85685d-5e65-4c58-9c71-21bd4fb1c7ee.sql  51348b63-43bf-475f-9919-118d15208386.sql
src/gui/: app.py  helpers.py
src/gui/components/: alert_loading.py  alert_message.py  config_menu.py  file_explorer.py  insert_exporter_view.py  list_view_table.py
src/models/: sql_objects.py
src/sql/: Consulta_Objetos_SQL.sql  Consulta_Tabla_SQL.sql  connection.py
src/utils/: enumerators.py  utils.py  validators.py
