[project]
name = "SQL Object Generator"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Javier Emilhen", email = "javier17.rg@putlook.com.com" }
]
dependencies = [
  "flet"
]

[tool.flet]
org = "com.mycompany"
product = "SQL Object Generator"
company = "Emilhen"
copyright = "Copyright (C) 2025 by Emilhen"

[tool.flet.app]
path = "src"